--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
+    <title>Notion-like Task Manager</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="scripts.js"></script>
+    <!-- Firebase SDKs -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
 </head>
 <body>
     <div class="container">
@@ -16,6 +20,6 @@
         </div>
         <div class="task-list" id="task-list"></div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
+
