--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
 </head>
 <body>
+    <div class="sidebar" id="sidebar"></div>
     <div class="container">
         <h1>Task Manager</h1>
         <div class="task-input">
@@ -22,4 +23,3 @@
     </div>
 </body>
 </html>
-
