--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div id="auth">
             <input type="email" id="email" placeholder="Email">
             <input type="password" id="password" placeholder="Password">
-            <button onclick="login()">ログイン</button>
-            <button onclick="signup()">サインアップ</button>
+            <button id="login-btn">ログイン</button>
+            <button id="signup-btn">サインアップ</button>
         </div>
         <div id="task-manager" style="display: none;">
             <div id="sidebar">
@@ -49,3 +49,4 @@
     <script src="main.js"></script>
 </body>
 </html>
+
