--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <body>
     <div id="app">
         <div id="auth">
-            <input type="email" id="email" placeholder="Email">
-            <input type="password" id="password" placeholder="Password">
-            <button id="login-btn">ログイン</button>
-            <button id="signup-btn">サインアップ</button>
+            <button id="google-login-btn">Googleでログイン</button>
         </div>
         <div id="task-manager" style="display: none;">
             <div id="sidebar">
