--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div id="app">
         <div id="auth">
-            <button id="google-login-btn">Googleでログイン</button>
+            <input type="email" id="email" placeholder="メールアドレス">
+            <input type="password" id="password" placeholder="パスワード">
+            <button id="login-btn">ログイン</button>
+            <button id="signup-btn">サインアップ</button>
         </div>
         <div id="task-manager" style="display: none;">
             <div id="sidebar">
@@ -46,4 +49,5 @@
     <script src="main.js"></script>
 </body>
 </html>
+
 
