--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <div id="auth">
-            <input type="email" id="email" placeholder="メールアドレス">
-            <input type="password" id="password" placeholder="パスワード">
-            <button id="login-btn">ログイン</button>
-            <button id="signup-btn">サインアップ</button>
-        </div>
-        <div id="task-manager" style="display: none;">
+        <div id="task-manager">
             <div id="sidebar">
                 <h2>プロジェクト</h2>
                 <ul id="project-list"></ul>
@@ -49,5 +43,3 @@
     <script src="main.js"></script>
 </body>
 </html>
-
-
